# psxle

./: .clang-format  CMakeLists.txt  README.md  libpcsxcore  plugins
cmake/: FindGTK3.cmake
include/: log.h  psxle_interface.h
libpcsxcore/: plugins.c  plugins.h  psxcounters.c  psxcounters.h  psxinterpreter.c
plugins/dfinput/: pad.c  pad.h
plugins/dfxvideo/: draw.c  gpu.c
psxle_python_interface/: psxle_c_wrapper.cc  psxle_c_wrapper.h  psxle_python_interface.py
src/: linuxSystem.cc  log.cc  main.cc  psxle_interface.cc
